# verifiable-agentkit

./: .env  .env.example  .gitignore  Cargo.tom  Cargo.toml  INSTALL_FIXES.md  LICENSE  README.md  TECHNICAL_SPEC.md  apply-enhanced-generator.sh  apply-paste-fixes.sh  apply-ultra-simple-generator.sh  auto-fix-paste.sh  check-zkengine-setup.sh  check_services.sh  clean_rust_main.sh  compile_fix.py  complete-wasmi-fix.sh  consolidate.sh  copy_exact.sh  create_fixed_html.py  debug_and_fix_location.sh  emergency_fix.sh  fix-zkengine.sh  fix_advanced_examples.py  fix_ai_content_args.sh  fix_all.sh  fix_extract_function.py  fix_full_integrated.sh  fix_full_langchain_service.sh  fix_functions.py  fix_index_html_complete.sh  fix_issues.sh  fix_kyc_display.sh  fix_kyc_script.sh  fix_langchain_service.sh  fix_quotes.py  fix_remaining.sh  fix_rust_duplicates.sh  fix_syntax.py  (+55 more)
circle/: check_transfer_helper.js  circleAccountsHandler.js  circleHandler.js  executeTransfer.js  package-lock.json  package.json  test-real-mode.js
langchain_env/: pyvenv.cfg
src/: main.rs  main.rs.backup  main.rs.backup-pre-langchain  main.rs.backup.20250613_230435  main.rs.backup3  main.rs.backup_ai_20250612_074329  main.rs.backup_rename_20250611_235325  main.rs.backup_verify  main.rs.bak  main.rs.pre_streamline_backup  main.rs.wasm_backup
static/: index.html  index.html.backup  index.html.backup-20250615-155429  index.html.backup.20250611_180848  index.html.backup.20250611_202126  index.html.backup.20250611_203239  index.html.backup.20250613_081008  index.html.backup.broken  index.html.backup.debug  (+15 more)
(+123 files in other folders)
